k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capstone-api
  labels:
    app: capstone-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: capstone-api
  template:
    metadata:
      labels:
        app: capstone-api
    spec:
      containers:
      - name: capstone-api
        image: mcastellin/udacity-capstone-api:latest
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: capstone-api-svc
spec:
  selector:
    app: capstone-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: capstone-api-is
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /api
        backend:
          serviceName: capstone-api-svc
          servicePort: 80
