k8s/service-ingress.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: capstone-api-svc
spec:
  selector:
    app: capstone-api
    release: blue
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 8080

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: capstone-api-is
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: capstone-api-svc
          servicePort: 80
